# certrelay

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: publish-go.yml  publish-js.yml  publish-kotlin.yml  publish-python.yml  publish-swift.yml  release-plz.yml  snippets.yml  test.yml
fabric/: Cargo.toml
fabric/examples/: extract-snippets.sh  test-example.sh
fabric/examples/go/: go.mod  main.go
fabric/examples/js/: index.mjs
fabric/examples/kotlin/: Example.kt
fabric/examples/python/: example.py
fabric/examples/rust/: Cargo.toml
fabric/examples/rust/src/: main.rs
fabric/examples/swift/: Example.swift
fabric/go/: README.md  fabric.go  go.mod  go.sum  signing.go
fabric/go/cmd/fabric/: main.go
fabric/js/: README.md  package-lock.json
fabric/js/fabric-core/: package.json
fabric/js/fabric-core/src/: fabric.ts  index.ts  provider.ts  seeds.ts  signing.ts
fabric/js/fabric-react-native/: package.json
fabric/js/fabric-react-native/src/: index.ts  rn-libveritas.d.ts  signing.ts
fabric/js/fabric-web/: package.json
fabric/js/fabric-web/src/: cli.ts  index.ts  signing.ts
fabric/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
fabric/kotlin/src/main/kotlin/org/spacesprotocol/fabric/: Fabric.kt  FabricError.kt  Hints.kt  Libveritas.kt  RelayPool.kt  Seeds.kt  Signing.kt
fabric/kotlin/src/main/kotlin/org/spacesprotocol/fabric/cli/: Main.kt
fabric/python/: README.md  pyproject.toml
fabric/python/fabric/: __init__.py  __main__.py  client.py  hints.py  pool.py  seeds.py  signing.py
fabric/rust/: Cargo.toml  README.md
fabric/rust/src/: anchor.rs  client.rs  lib.rs  main.rs  seeds.rs  signing.rs
fabric/src/: client.rs  lib.rs  pow.rs  seeds.rs
fabric/swift/: Package.swift  README.md
fabric/swift/Sources/Fabric/: Fabric.swift  Hints.swift  RelayPool.swift  Seeds.swift  Signing.swift
fabric/swift/Sources/FabricCLI/: FabricCLI.swift
js/: package-lock.json  package.json
js/fabric-core/: README.md  package.json
js/fabric-core/src/: fabric.ts  hints.ts  index.ts  pool.ts  pow.ts  provider.ts  seeds.ts
js/fabric-react-native/: README.md  package.json
js/fabric-react-native/src/: index.ts  rn-libveritas.d.ts
js/fabric-web/: README.md  package.json
js/fabric-web/src/: index.ts
relay/: Cargo.toml
relay/src/: anchor.rs  app.rs  handler.rs  http.rs  lib.rs  main.rs  peer.rs  pow.rs  relay.rs  spaced.rs  store.rs
relay/tests/: integration_tests.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: fabric_client.rs
