[workspace]
resolver = "2"
members = ["fabric", "relay", "tests"]

[workspace.package]
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/spacesprotocol/certrelay"
homepage = "https://spacesprotocol.org"
authors = ["Buffrr <contact@buffrr.dev>"]

[workspace.dependencies]
fabric-resolver = { path = "fabric", version = "0.2.3" }
libveritas = { version = "0.2" }
libveritas_testutil = { version = "0.2" }

spaces_client = { version = "0.1" }
spaces_protocol = { version = "0.1" }
spaces_nums = { version = "0.1" }
spaces_checkpoint = { version = "0.1" }
spacedb = { version = "0.1", features = ["hash-idx"] }
