[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "certrelay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
libveritas = { workspace = true }
resolver = { path = "../fabric", package = "fabric", default-features = false }
spaces_protocol = { workspace = true }
spaces_client = { workspace = true }
spaces_ptr = { workspace = true }
spacedb = { git = "https://github.com/spacesprotocol/spacedb.git", version = "0.0.11" }
governor = "0.8"
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
borsh = { version = "1.6", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.37", features = ["sync", "rt-multi-thread", "macros"] }
rand = "0.9"
sha2 = "0.10"
tracing = "0.1"
yuki = {git = "https://github.com/imperviousinc/yuki.git" }
env_logger = "0.11.9"
hex = "0.4.3"

[features]
testutil = []

[dev-dependencies]
libveritas_testutil = {workspace = true}
spaces_ptr = { workspace = true }
