[package]
name = "relay"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "certrelay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
libveritas = { workspace = true }
resolver = { path = "../fabric/rust", package = "fabric-resolver", default-features = false }
spaces_protocol = { workspace = true }
spaces_client = { workspace = true }
spaces_nums = { workspace = true }
spaces_checkpoint = { workspace = true}
spacedb = { workspace = true }
governor = "0.8"
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
borsh = { version = "1.6", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.37", features = ["sync", "rt-multi-thread", "macros"] }
rand = "0.9"
sha2 = "0.10"
tracing = "0.1"
yuki = { version = "0.0.1", package = "bitcoin_yuki" }
env_logger = "0.11.9"
hex = "0.4.3"
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"
url = "2"

[features]
testutil = []

[dev-dependencies]
libveritas_testutil = {workspace = true}
spaces_nums = { workspace = true }
