[project]
name = "fabric-resolver"
version = "0.1.0"
description = "Python client for the certrelay fabric network"
requires-python = ">=3.10"
dependencies = ["libveritas==0.0.0.dev20260326194328"]

[project.optional-dependencies]
signing = ["coincurve"]

[project.scripts]
fabric = "fabric.__main__:main"
